# ClariusTracker

./: README.md
calibrationClarius/: MarkupCommands.txt  PivotCalib.h5  PlatformFiducials.mrk.json  README.md  TipToStylus_Calibration.txt  ~$platformV4.SLDPRT
calibrationClarius/Aruco_PDFs/: README.md
calibrationClarius/Config_Clarius/: PlusDeviceSet_Server_OpticalMarkerTracker_Mmf_mergedto45.xml  README.md  TipToStylus_Calibration.txt  arucoTracking.xml  clariusConfig.xml  new_calibration.yml
calibrationClarius/Current_Models/: README.md  arucoStand.SLDPRT  clariusAruco.SLDPRT  clariusArucoV3.SLDPRT  clariusMoldV2.SLDPRT  clariusTracker.SLDPRT  opticalStand.SLDPRT  opticalStand.STL  simpleClip.SLDPRT  stylusV2.SLDPRT  stylusV2.STL  trackerClip.SLDPRT
calibrationClarius/Old_Models/: arucoOpticalStandClariusV1.SLDPRT  arucoOpticalStandClariusV1.STL  arucoOpticalStandClariusV2.SLDPRT  arucoPlatformV2.SLDPRT  clariusAruco.STL  clariusArucoV2.SLDPRT  clariusMold.stl  middleStand.SLDPRT  middleStand.STL  opticalEndClip.SLDPRT  opticalHolder.stl  outerAruco.SLDPRT  outerAruco.STL  outerAruco2.STL  outerStand.SLDPRT  outerStand.STL  peg.SLDPRT  peg.STL  platformV1.SLDPRT  platformV3.SLDPRT  platformV3.STL  platformV4.SLDPRT  platformV4.STL  platformV5.SLDPRT  platformV5.STL  platformV6.SLDPRT  screwCap.SLDPRT  screwCap.STL  (+3 more)
calibrationClarius/Procrustean_PTLR/: CMakeLists.txt  README.md
calibrationClarius/Procrustean_PTLR/PTL_Registration/: CMakeLists.txt  PTL_Registration.py
calibrationClarius/Procrustean_PTLR/PTL_Registration/Resources/UI/: PTL_Registration.ui
(+28 files in other folders)
